--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pandas==2.2.2
 peft==0.12.0
 pillow==10.4.0
 pycocotools==2.0.8
+python-dotenv==1.1.0
 safetensors==0.4.4
 scikit-learn==1.2.2
 scipy==1.14.1
@@ -32,9 +33,9 @@ tiktoken==0.8.0
 timm==1.0.9
 tokenizers==0.21
 tomlkit==0.12.0
-torch==2.1.2
-torchaudio==2.1.2
-torchvision==0.16.2
+# torch==2.1.2
+# torchaudio==2.1.2
+# torchvision==0.16.2
 tqdm==4.66.5
 transformers==4.49.0
 wandb==0.17.9
