--- a/configs/datasets/paperspace_configuration.json
+++ b/configs/datasets/paperspace_configuration.json
@@ -5,5 +5,17 @@
         "anno_file": "datasets/coin/annotations/test_train-0.25_0.5_earlier-120s_240s.json",
         "metadata_path": "datasets/coin/videos_metadata.json",
         "frame_fps": 0.5, "max_num_frames": 120
+    },
+    {
+        "dataset_cls": "MAGQAStreamDataset",
+        "video_root": "/mnt/training-data/shot2story",
+        "anno_file": "datasets/shot2story/annotations/test_magqa_train-0.25_0.5-earlier.json",
+        "metadata_path": "datasets/shot2story/release_134k_videos_metadata.json"
+    },
+    {
+        "dataset_cls": "DenseVideoCaptioningStreamDataset",
+        "video_root": "/mnt/training-data/shot2story",
+        "anno_file": "datasets/shot2story/annotations/test_dvc_train-human_anno-0.25_0.5_earlier.json",
+        "metadata_path": "datasets/shot2story/release_134k_videos_metadata.json"
     }
 ]
