--- a/paths.yaml
+++ b/paths.yaml
@@ -39,16 +39,20 @@ arl_scout:
   frame_fps: 1
   output_fname: arl_scout_test-random_prompt-pred.json
 
+charades:
+  output_dir: outputs/aha/eval
+  pred_file: charades_test-random_prompt-pred.json 
+  gold_file: datasets/charades/annotations/test-random_prompt.json
 
 
 tvsum:
-  output_dir: outputs/hisum_eval/eval
+  output_dir: outputs/tvsum/eval
   pred_file: tvsum_test-random_prompt-pred.json
   gold_file: datasets/tvsum/ydata-tvsum50-v1_1/data/ydata-tvsum50-anno.tsv
 
 
 hisum:
-  output_dir: outputs/hisum_eval
+  output_dir: outputs/hisum_eval/eval
   pred_file: hisum_test-random_prompt-pred.json 
   gold_file: /data/yt8m/annotations/mr_hisum.h5
 
