--- a/paths.yaml
+++ b/paths.yaml
@@ -64,6 +64,14 @@ tvsum:
   gold_file: datasets/tvsum/ydata-tvsum50-v1_1/data/ydata-tvsum50-anno.tsv
 
 
+
+qvh:
+  output_dir: outputs/qvh/eval
+  pred_file: qvh_val-random_prompt-pred.json
+  gold_file: datasets/qvh/annotations/highlight_val_release.jsonl
+  output_file: qvh_val-random_prompt-eval.json
+
+
 hisum:
   output_dir: outputs/hisum/eval
   pred_file: hisum_test-random_prompt-pred.json 
