--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
 accelerate==1.5.2
+apex==0.9.10dev
 av==13.0.0
-bitsandbytes==0.41.0
+bitsandbytes==0.45.3
+cog==0.14.7
+data_processing==0.1.4
+diffusers==0.33.1
+einops==0.8.1
+einops_exts==0.0.4
+fastapi==0.115.12
+fire==0.7.0
 datasets==2.16.1
 decord==0.6.0
 deepspeed==0.15.4
-einops==0.6.1
-fastapi==0.112.2
 ffmpeg-python==0.2.0
 Flask==3.0.3
-huggingface-hub==0.26.0
+ftfy==6.3.1
+gradio==5.29.0
+groq==0.24.0
+h5py==3.13.0
+horovod==0.28.1
+
+huggingface-hub==0.29.2
 Jinja2==3.1.4
 matplotlib==3.9.2
 moviepy==1.0.3
@@ -22,23 +34,33 @@ opencv-python==4.10.0.84
 pandas==2.2.2
 peft==0.12.0
 pillow==10.4.0
+pyav==14.2.1
+python-dotenv==1.1.0
+PyYAML==6.0.2
+regex==2024.11.6
+Requests==2.32.3
+rich==14.0.0
+rouge==1.0.1
 pycocotools==2.0.8
 python-dotenv==1.1.0
 safetensors==0.4.4
 scikit-learn==1.2.2
 scipy==1.13.1
-submitit==1.5.1
 tensorboard==2.17.1
 tiktoken==0.8.0
 timm==1.0.9
 tokenizers==0.21
 tomlkit==0.12.0
-torch==2.5.1
-torchaudio
-torchvision==0.20.1
+tyro==0.9.19
+xformers==0.0.30
 tqdm==4.66.5
 transformers==4.49.0
 wandb==0.17.9
+setuptools==75.8.0
+sglang==0.4.6.post2
+shortuuid==1.0.13
+six==1.17.0
+submitit==1.5.2
 h5py==3.13.0
 yt-dlp==2021.12.25
 bs4==0.0.2
