--- a/configs/datasets/aha_config.json
+++ b/configs/datasets/aha_config.json
@@ -1,30 +1,28 @@
 [
     {
         "dataset_cls": "DenseVideoCaptioningStreamDataset",
-        "video_root": "/data/shot2story/videos/release_134k_videos",
+        "video_root": "datasets/shot2story/videos",
         "anno_file": "datasets/shot2story/annotations/dvc_train-human_anno-0.25_0.5_earlier.json",
         "metadata_path": "datasets/shot2story/release_134k_videos_metadata.json"
     },
     {
         "dataset_cls": "MAGQAStreamDataset",
-        "video_root": "/data/shot2story/videos/release_134k_videos",
+        "video_root": "datasets/shot2story/videos",
         "anno_file": "datasets/shot2story/annotations/magqa_train-0.25_0.5-earlier.json",
         "metadata_path": "datasets/shot2story/release_134k_videos_metadata.json"
     },
     {
         "dataset_cls": "DenseVideoCaptioningStreamDataset",
-        "video_root": "/data/coin/videos",
+        "video_root": "datasets/coin/videos",
         "anno_file": "datasets/coin/annotations/train-0.25_0.5_earlier-120s_240s.json",
         "metadata_path": "datasets/coin/videos_metadata.json",
         "frame_fps": 0.5, "max_num_frames": 120
     },
     {
-        "dataset_cls": "HiSumDataset",
-        "video_root": "/data/yt8m/videos",
-        "anno_file": "datasets/hisum/annotations/train.json",
-        "metadata_path": "datasets/hisum/videos_metadata.json",
-        "hisum_h5_file": "datasets/hisum/annotations/mr_hisum.h5",
-        "hisum_metadata": "datasets/hisum/vocabulary.csv",
+        "dataset_cls": "HIHD",
+        "video_root": "datasets/HIHD/videos",
+        "anno_file": "datasets/HIHD/annotations/HIHD_metadata.csv",
+        "metadata_path": "datasets/HIHD/videos_metadata.json",
         "frame_fps": 1
     }
 ]
